Record view / Related records / Avoid overlaping title.

--- a/web-ui/src/main/resources/catalog/style/gn.less
+++ b/web-ui/src/main/resources/catalog/style/gn.less
@@ -864,6 +864,7 @@ i.fa-times.delete:hover {
   .gn-status-stamp {
     position: absolute;
     margin: 100px;
+    right: 0;
     overflow: hidden;
     transform: rotate(-15deg);
     font-size: 4rem;
